--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site
 title:              KCI EV Club
-bio:                'KCI has their first foray into electric cars'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+bio:                'At KCI we are making our first foray into building electric cars.'
+description:        "KCI students building cars because we can."
 reading_time:       true
 words_per_minute:   200
-logo:               
+logo:                  
 background:         
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_CA
