--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ bio:                'At KCI we are making our first foray into building electric
 description:        "KCI students building cars because we can."
 reading_time:       true
 words_per_minute:   200
-logo:                  
-background:         
+logo:                  'assets/img/logo.png'
+background:         'assets/img/placeholder-big.jpg'       
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_CA
 url:                https://kciev.github.io
